<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">


            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:visibility="gone" />

            <!--<ImageView-->
                <!--android:id="@+id/imageView"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="176dp"-->
                <!--android:layout_gravity="center"-->
                <!--android:layout_marginBottom="5dp"-->
                <!--android:src="@drawable/ic_ez" />-->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent">

                <EditText

                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:textColor="#f57c7c"
                    android:textColorHighlight="@android:color/holo_red_dark"
                    android:textColorHint="@android:color/holo_red_dark"
                    android:textColorLink="@android:color/holo_red_dark"
                    android:textCursorDrawable="@null" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent">

                <EditText

                    android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="54dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:textColor="@color/btn_logut_bg"
                    android:textColorHint="@android:color/holo_red_dark"
                    android:textCursorDrawable="@null" />
            </android.support.design.widget.TextInputLayout>

            <!-- Login Button -->

            <Button
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@android:color/holo_red_light"
                android:text="@string/btn_login"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_reset_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@android:color/holo_red_light"
                android:text="@string/btn_forgot_password"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light" />


            <Button
                android:id="@+id/btn_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@null"
                android:text="@string/btn_link_to_register"
                android:textColor="#e94f4f"
                android:textSize="15dp" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>